--- a/GAButtonMapper/Resources/layout/AppSelectorLayout.xml
+++ b/GAButtonMapper/Resources/layout/AppSelectorLayout.xml
@@ -4,18 +4,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:id="@+id/AppSelectorToolbar"/>
-    <android.support.v7.widget.SearchView
+    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/AppSelectorSearchView"
         app:iconifiedByDefault="false"
         app:queryHint="@string/AppSelector_SearchHint"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
         android:scrollbars="vertical"
