--- a/GAButtonMapper/Resources/layout/AppSelectorListLayout.xml
+++ b/GAButtonMapper/Resources/layout/AppSelectorListLayout.xml
@@ -3,7 +3,7 @@
 	xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-	<android.support.v7.widget.CardView
+	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_margin="5dp"
@@ -40,5 +40,5 @@
 					android:id="@+id/AppSelectorListAppPackageName"/>
 			</LinearLayout>
 		</LinearLayout>
-	</android.support.v7.widget.CardView>
+	</androidx.cardview.widget.CardView>
 </FrameLayout>
