--- a/GAButtonMapper/Resources/layout/ButtonTestLayout.xml
+++ b/GAButtonMapper/Resources/layout/ButtonTestLayout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ButtonTestMainLayout">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
