--- a/GAButtonMapper/Resources/layout/MainLayout.xml
+++ b/GAButtonMapper/Resources/layout/MainLayout.xml
@@ -96,6 +96,33 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:minHeight="?android:attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                android:id="@+id/Main3rdPartyAppCardView"
+                app:cardCornerRadius="5dp">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Main_3rdParty_Title"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/Main_3rdParty_Summary"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:minHeight="?android:attr/actionBarSize"
+                android:background="?attr/colorPrimary"
                 android:id="@+id/MainDisableAIShortcutCardView"
                 app:cardCornerRadius="5dp">
                 <LinearLayout
